--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -264,9 +264,9 @@
                     </div>
 
                     <div class="form-group row pr-3 bugs-options{{i}}" id="tunnelImageDiv{{i}}" style="display: none;">
-                        <label for="tunnelimage{{i}}" class="col col-form-label">Tunnel Image</label>
+                        <label for="tunnelImage{{i}}" class="col col-form-label">Tunnel Image</label>
                         <div class="col-sm-5">
-                            <select class="form-control" id="tunnelimage{{i}}">
+                            <select class="form-control" id="tunnelImage{{i}}">
                                 <option value="">Default (Parsley)</option>
                                 {% for asset in tunnel_assets %}
                                 <option value="{{ asset }}">{{ asset }}</option>
