--- a/Arena/templates/management/animal_summary.html
+++ b/Arena/templates/management/animal_summary.html
@@ -15,7 +15,7 @@
                     <label for="arenaForSummarySelect">Arena</label>
                     <select id="arenaForSummarySelect" style="margin-left: 0.5em" autocomplete="off">
                         {% for arena in summary_animal_ids.keys() %}
-                            <option value="{{ arena }}">{{ arena }}</option>
+                            <option value="{{ arena }}" {% if arena == arena_name %}selected{% endif %}>{{ arena }}</option>
                         {% endfor %}
                     </select>
 
